# rwa

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  rwa.py  test_rwa.py
.github/workflows/: linter.yml  python-package.yml
docs/: rwa.rst
src/rwa/: __init__.py  core.py
test/: test_rwa.py
tests/: __init__.py  conftest.py  test_rwa.py
